# easyspack

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: build-setup.yml  license.yml  test.yml
src/easyspack/: metadata.py
src/easyspack/cli/: __init__.py
test/share/lmod/modulefiles/: 01-GCCcore-15.1.0.lua
test/share/testenv/: .bashrc  minimal.dockerfile
